[package]
name = "eww"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>", "Michał Isalski <isalski.michal@gmail.com>"]
edition = "2021"

description = "egui backend (winit + wgpu)"
keywords = ["egui", "winit", "wgpu", "gui", "backend"]
homepage = "https://github.com/michalusio/eww"
repository = "https://github.com/michalusio/eww"
license = "Apache-2.0"

[dependencies]
egui = "0.19.0"
egui-wgpu = "0.19.0"
egui-winit = "0.19.0"
web-sys = "0.3.53"

[features]
default_fonts = ["egui/default_fonts"]

[dev-dependencies]
futures = "0.3.24"
