[package]
name = "egui-wgpu"
version = "0.0.0-alpha.4"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "egui rendering support for wgpu"
keywords = ["egui", "wgpu", "gui", "graphics", "rendering"]
homepage = "https://github.com/LU15W1R7H/eww"
repository = "https://github.com/LU15W1R7H/eww"
license = "Apache-2.0"

[dependencies]
egui = "0.12.0"
wgpu = "0.8.1"

wgpu-util = "0.0.0-alpha.4"
bytemuck = { version = "1.5.1", features = [ "derive" ] }
mint = "0.5.6"
#wgpu-util = { git = "https://github.com/LU15W1R7H/wgpu-util", branch = "main" }
#bytemuck = { git = "https://github.com/Lokathor/bytemuck", branch = "main", features = [ "derive" ] }
