[package]
name = "egui-wgpu"
version = "0.0.1-alpha.1"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "egui rendering support for wgpu"
keywords = ["egui", "wgpu", "gui", "graphics", "rendering"]
homepage = "https://github.com/LU15W1R7H/eww"
repository = "https://github.com/LU15W1R7H/eww"
license = "Apache-2.0"

[dependencies]
egui = "0.13.1"
wgpu = "0.9.0"

wgpu-util = "0.0.0-alpha.5"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
mint = "0.5.6"
#wgpu-util = { git = "https://github.com/LU15W1R7H/wgpu-util", branch = "main" }
#bytemuck = { git = "https://github.com/Lokathor/bytemuck", branch = "main", features = [ "derive" ] }
