[package]
name = "egui-wgpu"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "egui rendering support for wgpu"
keywords = ["egui", "wgpu", "gui", "graphics", "rendering"]
homepage = "https://github.com/LU15W1R7H/eww"
repository = "https://github.com/LU15W1R7H/eww"
license = "Apache-2.0"

[dependencies]
egui = "0.14.2"
wgpu = { version = "0.10.2", features = [ "spirv" ] }

wgpu-util = { git = "https://github.com/LU15W1R7H/wgpu-util", branch = "main" }
bytemuck = { version = "1.7.2", features = [ "derive" ] }
mint = "0.5.7"
