[package]
name = "egui-winit"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "egui platform support for winit"
keywords = ["egui", "winit", "gui", "window", "graphics"]
homepage = "https://github.com/LU15W1R7H/eww"
repository = "https://github.com/LU15W1R7H/eww"
license = "Apache-2.0"

[dependencies]
egui = "0.14.2"
winit = "0.25.0"

copypasta = "0.7.1"
webbrowser = "0.5.5"

tracing = "0.1.28"
