[package]
name = "eww"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "egui backend (winit + wgpu)"
keywords = ["egui", "winit", "wgpu", "gui", "backend"]
homepage = "https://github.com/LU15W1R7H/eww"
repository = "https://github.com/LU15W1R7H/eww"
license = "Apache-2.0"

[dependencies]
egui-winit = { path = "../egui-winit" }
egui-wgpu = { path = "../egui-wgpu" }

[dev-dependencies]
futures = "0.3.17"

